CSS fixes for sizing, alignment, and header

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 html {
     box-sizing: border-box;
-    display: flex;
-    justify-content: center;
 }
 
 *, *:before, *:after {
@@ -9,7 +7,31 @@ html {
     border: 1px solid red;
 }
 
+/* Width of content */
+#header_content, section, footer {
+    width: 70vw;
+}
+
 body {
     margin: 0;
-    width: 80vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+header {
+    width: 100vw;
+    display: flex;
+    background-color: #000000;
+    justify-content: center;  
+}
+
+#header_content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#header_content a {
+    color: #ffffff;
 }
